fix column cutoff

--- a/src/app/components/grid/grid.scss
+++ b/src/app/components/grid/grid.scss
@@ -1,6 +1,7 @@
 .grid {
   columns: 5;
   column-gap: 8px;
+  column-fill: auto;
   max-width: 1600px;
   margin: 0 auto;
 }
